# QuantStream-Labs

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
apps/api/: README.md  pyproject.toml
apps/api/quantstream_api/: __init__.py  app.py  models.py  service.py
apps/api/tests/: test_api.py
apps/demo/: README.md  pyproject.toml
apps/demo/quantstream_demo/: __init__.py  cli.py  report.py  sample_data.py
apps/demo/quantstream_demo/data/: acme_trades.csv  btcusd_coinbase_defective.csv
apps/demo/tests/: test_csv.py  test_demo.py  test_sample_data.py
data/demo/: README.md  SHA256SUMS  clean_quotes.csv  clean_trades.csv  defect_manifest.json  defective_quotes.csv  defective_trades.csv  expected_results.json
data/real/: README.md  btcusd_coinbase.csv  expected.json
docs/: alpha-mirage.md  backend-architecture.md  deterministic-replay.md  local-demo.md  methodology.md  validation-rules.md
frontend/alpha-guard-stream/: .env.example  README.md  package-lock.json  package.json
frontend/alpha-guard-stream/src/: routeTree.gen.ts  styles.css
frontend/alpha-guard-stream/src/components/quant/: Shell.tsx  primitives.tsx
frontend/alpha-guard-stream/src/lib/: api.ts  fixtures.ts  useCountUp.ts
frontend/alpha-guard-stream/src/routes/: __root.tsx  index.tsx  orderbook.tsx  replay.tsx  upload.tsx  validation.tsx
frontend/alpha-guard-stream/src/routes/api/backend/: $.ts
services/dataset_registry/: README.md  pyproject.toml
services/dataset_registry/quantstream_dataset_registry/: __init__.py  bootstrap.py  checksums.py  cli.py  generate.py  hf.py  paths.py  registry.py
services/dataset_registry/tests/: test_checksums.py  test_generate.py  test_real_data.py  test_registry.py  test_reproducibility.py
services/orderbook-lab/: README.md  pyproject.toml
services/orderbook-lab/quantstream_orderbook/: __init__.py  book.py  confidence.py  l2.py  l2_sample.py  sample.py  state.py
services/orderbook-lab/tests/: _helpers.py  test_book.py  test_confidence.py  test_l2.py  test_sample.py
services/replay-engine/: README.md  pyproject.toml
services/replay-engine-cpp/: CMakeLists.txt  README.md
services/replay-engine-cpp/include/quantstream/: blake2b.hpp  csv_load.hpp  events.hpp  serialization.hpp
services/replay-engine-cpp/src/: blake2b.cpp  csv_load.cpp  replay_main.cpp  serialization.cpp
services/replay-engine-cpp/tests/: check.hpp  golden_events.hpp  test_golden.cpp  test_serialization.cpp
services/replay-engine/quantstream_replay/: __init__.py  config.py  engine.py  sink.py
services/replay-engine/tests/: _helpers.py  test_config.py  test_replay.py  test_sink.py
services/research-engine/: README.md  pyproject.toml
services/research-engine/quantstream_research/: __init__.py  backtest.py  metrics.py  mirage.py  strategy.py
services/research-engine/tests/: _helpers.py  test_annualized.py  test_attribution.py  test_backtest.py  test_costs.py  test_integration.py  test_metrics.py  test_mirage.py  test_strategy.py
services/schema-worker/: README.md  pyproject.toml
services/schema-worker/quantstream_schema/: __init__.py  infer.py  loader.py  mapping.py  parsing.py
services/schema-worker/tests/: test_infer.py  test_loader.py  test_parsing.py
services/validation-engine/: README.md  pyproject.toml
services/validation-engine/quantstream_validation/: __init__.py  checks.py  defects.py  engine.py  injector.py  report.py
services/validation-engine/tests/: _helpers.py  test_checks.py  test_engine.py  test_injector.py  test_precision_recall.py
