[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantstream-api"
version = "0.1.0"
description = "FastAPI gateway for QuantStream Labs: run the demo or upload a CSV over HTTP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "httpx>=0.27"]

[project.scripts]
quantstream-api = "quantstream_api.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantstream_api*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's `= File(...)` / `= Depends(...)` in argument defaults is idiomatic.
"quantstream_api/app.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
