[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantstream-orderbook"
version = "0.1.0"
description = "OrderBookLab (L1): top-of-book reconstruction and book-confidence for QuantStream Labs."
readme = "README.md"
requires-python = ">=3.10"
# Depends on quantstream-contracts, installed editable from packages/contracts.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantstream_orderbook*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
