[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantstream-replay"
version = "0.1.0"
description = "Deterministic replay engine (Python reference) for QuantStream Labs."
readme = "README.md"
requires-python = ">=3.10"
# Depends on quantstream-contracts, installed editable from packages/contracts.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
kafka = ["confluent-kafka>=2.0"]  # KafkaSink transport (not needed for the checksum)

[tool.setuptools.packages.find]
where = ["."]
include = ["quantstream_replay*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
